--- a/templates/artist/profil.html.twig
+++ b/templates/artist/profil.html.twig
@@ -16,8 +16,8 @@
                          alt="This is a profil picture">
                 </div>
             </div>
-            <div class="col-sm-12 col-lg-6">
-                <p class="description-homepage fs-4">{{ artist.description }}</p>
+            <div class="col-sm-12 col-lg-6 d-sm-flex justify-content-sm-center">
+                <p class="description-homepage fs-2">{{ artist.description }}</p>
             </div>
         </div>
     </div>
