--- a/templates/artCard/show.html.twig
+++ b/templates/artCard/show.html.twig
@@ -7,7 +7,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-3">
-                <h1>" {{ artCard.title }} "</h1>
+                <h1 class="fs-1">" {{ artCard.title }} "</h1>
                 <h2 class="fst-italic fs-4">{{ artCard.user.nickname }}</h2>
             </div>
         </div>
@@ -15,7 +15,7 @@
             <div class="col-12 col-lg-6 d-flex justify-content-center">
                 <div class="art-homepage">
                     <img class="picture-homepage img-fluid mb-3" src="{{ artCard.pictureArt }}">
-                    <p class="description-homepage">{{ artCard.description}}</p>
+                    <p class="description-homepage fs-2">{{ artCard.description}}</p>
                 </div>
             </div>
             <div class="col-12 col-lg-6 d-flex justify-content-center">
