--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -2,14 +2,14 @@
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark"
                 aria-controls="offcanvasNavbarDark">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon fs-2"></span>
         </button>
-        <a class="navbar-brand" href="{{ path('home_index') }}">Local ' <span class="text-danger">Art</span></a>
+    <a class="navbar-brand fs-1" href="{{ path('home_index') }}">Local ' <span class="text-danger">Art</span></a>
         <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcanvasNavbarDark"
              aria-labelledby="offcanvasNavbarDarkLabel">
             <div class="offcanvas-header">
                 <h2 class="offcanvas-title" id="offcanvasNavbarDarkLabel">Menu</h2>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                <button type="button" class="btn-close btn-close-white fs-1" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
             </div>
             <div class="offcanvas-body d-flex flex-column">
@@ -18,66 +18,63 @@
                         {% if is_granted('ROLE_ADMIN') %}
                             <h4 class="text-center">Gestion admin</h4>
                             <li class="nav-item text-center pt-2">
-                                <a class="nav-link" href="{{ path('artCard_pending') }}">Nouveaux marqueurs</a>
+                                <a class="nav-link fs-2" href="{{ path('artCard_pending') }}">Nouveaux marqueurs</a>
                             </li>
                             <li class="nav-item text-center">
-                                <a class="nav-link" href="{{ path('user_index') }}">Gestion utilisateurs</a>
+                                <a class="nav-link fs-2" href="{{ path('user_index') }}">Gestion utilisateurs</a>
                             </li>
                             <li class="nav-item text-center pb-3 border-bottom">
-                                <a class="nav-link" href="{{ path('artist_showAll') }}">Gestion artistes</a>
+                                <a class="nav-link fs-2" href="{{ path('artist_showAll') }}">Gestion artistes</a>
                             </li>
                         {% endif %}
                         {% if is_granted('ROLE_USER') or is_granted('ROLE_ADMIN') or is_granted('ROLE_ARTIST') %}
-                            <h4 class="text-center pt-3">Mon compte</h4>
+                            <h4 class="text-center pt-3 fs-2">Mon compte</h4>
                             <li class="nav-item text-center pt-3">
                                 {% if is_granted('ROLE_ARTIST') %}
-                                    <a class="nav-link" aria-current="page" href="{{ path('artist_myProfil') }}">
+                                    <a class="nav-link fs-2" aria-current="page" href="{{ path('artist_myProfil') }}">
                                         Mon profil</a>
                                 {% elseif is_granted ('ROLE_USER') %}
-                                    <a class="nav-link" aria-current="page" href="{{ path('user_show') }}">Mon
+                                    <a class="nav-link fs-2" aria-current="page" href="{{ path('user_show') }}">Mon
                                         profil</a>
                                 {% endif %}
                             </li>
                             <li class="nav-item text-center">
                                 {% if is_granted('ROLE_ARTIST') %}
-                                    <a class="nav-link" aria-current="  " href="{{ path('artist_edit') }}">
+                                    <a class="nav-link fs-2" aria-current="page" href="{{ path('artist_edit') }}">
                                         Modifier mon profil</a>
                                 {% elseif is_granted ('ROLE_USER') %}
-                                    <a class="nav-link" aria-current="page" href="{{ path('user_edit') }}">Modifier mon
+                                    <a class="nav-link fs-2" aria-current="page" href="{{ path('user_edit') }}">Modifier mon
                                         profil</a>
                                 {% endif %}
                             </li>
                             <li class="nav-item text-center">
-                                <a class="nav-link" aria-current="page" href="{{ path('artCard_new') }}">Poster une
+                                <a class="nav-link fs-2" aria-current="page" href="{{ path('artCard_new') }}">Poster une
                                     oeuvre</a>
                             </li>
                         {% endif %}
                     {% endif %}
                     <li class="nav-item text-center pt-3">
-                        <a class="nav-link" aria-current="page" href="{{ path('home_index') }}">Accueil</a>
+                        <a class="nav-link fs-2" aria-current="page" href="{{ path('home_index') }}">Accueil</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link" href="{{ path('artist_showAll') }}">Artistes</a>
+                        <a class="nav-link fs-2" href="{{ path('artist_showAll') }}">Artistes</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link" href="{{ path('artCard_index') }}">Oeuvres</a>
-                    </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link" href="#">Carte</a>
+                        <a class="nav-link fs-2" href="{{ path('artCard_index') }}">Oeuvres</a>
                     </li>
                 </ul>
                 <div class="d-flex justify-content-between">
                     {% if app.user %}
                     <ul class="navbar-nav flex-grow-1 pe-3">
                         <li class="nav-item text-center">
-                            <a class="nav-link" href="{{ path('logout') }}">Déconnexion</a>
+                            <a class="nav-link fs-2" href="{{ path('logout') }}">Déconnexion</a>
                         </li>
                         {% else %}
                             <li class="nav-item text-center">
-                                <a class="nav-link" href="{{ path('login') }}">Connexion</a>
+                                <a class="nav-link fs-2" href="{{ path('login') }}">Connexion</a>
                             </li>
                             <li class="nav-item text-center">
-                                <a class="nav-link" href="{{ path('register_user') }}">S'inscrire</a>
+                                <a class="nav-link fs-2" href="{{ path('register_user') }}">S'inscrire</a>
                             </li>
                         {% endif %}
                     </ul>
