--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 text-center mb-3">
-                    <h1>" {{ frontArt.title }} "</h1>
+                    <h1 class="fs-1">" {{ frontArt.title }} "</h1>
                     <h2 class="fst-italic fs-4">{{ frontArt.user.nickname }}</h2>
                 </div>
             </div>
@@ -15,9 +15,9 @@
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="art-homepage">
                         <img class="picture-homepage img-fluid mb-3" src="{{ frontArt.pictureArt }}">
-                        <p class="description-homepage mb-sm-5 mb-lg-0">{{ frontArt.description[:195] ~ (frontArt.description|length > 200 ? '...') }}
+                        <p class="description-homepage mb-sm-5 mb-lg-0 fs-2">{{ frontArt.description[:195] ~ (frontArt.description|length > 200 ? '...') }}
                             {% if frontArt.description|length > 200 %}
-                            <a class="text-decoration-none text-danger pointer-event" href="{{ path('artCard_show', {id: frontArt.id}) }}">plus</a></p>
+                            <a class="text-decoration-none text-danger pointer-event fs-2" href="{{ path('artCard_show', {id: frontArt.id}) }}">plus</a></p>
                         {% endif %}
                     </div>
                 </div>
