--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Modification de compte{% endblock %}
 
 {% block body %}
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100 flex-fill">
+    <div class="container-fluid vh-100">
+        <div class="row justify-content-center align-items-center h-100 flex-fill">
             <div class="col-12 col-md-8">
                 <div class="card-register card bg-dark text-white">
                     <div class="card-body p-5 text-center">
