some css again and again

--- a/templates/artCard/_form.html.twig
+++ b/templates/artCard/_form.html.twig
@@ -1,9 +1,9 @@
 <div class="container-fluid vh-100">
     <div class="row align-items-lg-center h-100">
-        <div class="col-6 col-lg-6 d-flex justify-content-lg-center mb-4 mb-lg-0 align-self-center">
+        <div class="col-6 d-flex justify-content-lg-center mb-4 mb-lg-0 align-self-center">
             <div>{{ include('components/_map.html.twig') }}</div>
         </div>
-        <div class="col-6 col-lg-6 d-flex justify-content-lg-center align-self-center">
+        <div class="col-6 d-flex justify-content-lg-center align-self-center">
             <div class="card-register card bg-dark text-white form-artCard-container">
                 <div class="card-body p-5 text-center">
                     {{ form_start(form) }}
