--- a/templates/artCard/showPending.html.twig
+++ b/templates/artCard/showPending.html.twig
@@ -19,7 +19,7 @@
                         <div class="col-12 col-lg-6 d-flex justify-content-center">
                             <div class="art-homepage">
                                 <img class="picture-homepage img-fluid mb-3" src="{{ artCard.pictureArt }}">
-                                <p class="description-homepage">{{ artCard.description }}</p>
+                                <p class="description-homepage fs-4">{{ artCard.description }}</p>
                             </div>
                         </div>
                         <div class="col-12 col-lg-6 d-flex justify-content-center">
