change form propriety

--- a/templates/admin/artistModifyType.html.twig
+++ b/templates/admin/artistModifyType.html.twig
@@ -18,7 +18,7 @@
                                 {{ form_row(form.email) }}
                             </div>
                             <div class="form-outline form-white mb-4">
-                                {{ form_row(form.urlProfilPicture) }}
+                                {{ form_row(form.profilPicture) }}
                             </div>
                             <div class="form-outline form-white mb-4">
                                 {{ form_row(form.description) }}
