--- a/templates/artCard/showPending.html.twig
+++ b/templates/artCard/showPending.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}detail d'une oeuvre{% endblock %}
+{% block title %}{{ artCard.title }}{% endblock %}
 
 {% block body %}
 
