--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modification de compte{% endblock %}
+{% block title %}Modifier mon compte{% endblock %}
 
 {% block body %}
     <div class="container-fluid vh-100">
