--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -3,5 +3,10 @@
 {% block title %}Créer votre compte{% endblock %}
 
 {% block body %}
+    <div class="row">
+        <div class="col-12 text-center">
+            <h2 class="col fst-italic">Créer mon compte</h2>
+        </div>
+    </div>
     {{ include('user/_form.html.twig') }}
 {% endblock %}
