--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des utilisateurs{% endblock %}
+{% block title %}Mon profil{% endblock %}
 
 {% block body %}
 
