--- a/templates/artCard/_form.html.twig
+++ b/templates/artCard/_form.html.twig
@@ -1,10 +1,9 @@
-<div class="container-fluid vh-100">
-    <div class="row align-items-lg-center h-100">
+    <div class="row align-items-lg-center">
         <div class="col-6 d-flex justify-content-lg-center mb-4 mb-lg-0 align-self-center">
             <div>{{ include('components/_map.html.twig') }}</div>
         </div>
         <div class="col-6 d-flex justify-content-lg-center align-self-center">
-            <div class="card-register card bg-dark text-white form-artCard-container">
+            <div class="card-register card bg-dark text-white form-artCard-container m-0">
                 <div class="card-body p-5 text-center">
                     {{ form_start(form) }}
                     <div class="form-group row form-artCard">
