--- a/templates/artist/profil.html.twig
+++ b/templates/artist/profil.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {{ artist.nickname }} {% endblock %}
+{% block title %} Mon profil {% endblock %}
 
 {% block body %}
     <div class="container-fluid">
