--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+    {% block title %}Connexion{% endblock %}
+
 {% block body %}
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
